Fixex bugs. Added comments. Refactoring. Filled gaps in missing code.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
+/* Navigation bar */
 .navbar {
-
     margin-bottom: 0;
     background-color: #142130;
     border: 0;
@@ -22,21 +22,17 @@
     color: #142130;
     opacity: 0.7;
 }
+
+/* Carousel Photos */
 .carousel-inner img {
     width: 100%;
     height: 50%;
 }
+
+/* Tripsters About Us */
 .the-tripsters-about{
     font-family: 'Reenie Beanie', sans-serif;
     font-size: 50px !important;
-    letter-spacing: 4px;
-    margin-top: 50px;
-    margin-bottom: 30px;
-}
-.usefulTips{
-    font-family: 'Reenie Beanie', sans-serif;
-    font-size: 50px !important;
-    text-align: center;
     letter-spacing: 4px;
     margin-top: 50px;
     margin-bottom: 30px;
@@ -47,6 +43,22 @@
     letter-spacing: 4px;
     margin-top: 30px;
 }
+#demo, #demo2, #demo3{
+    margin-top: 20px;
+}
+
+/* Useful tips widget CSS */
+.center {
+    text-align: center;
+}
+.usefulTips{
+    font-family: 'Reenie Beanie', sans-serif;
+    font-size: 50px !important;
+    text-align: center;
+    letter-spacing: 4px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
 .thin-blue-border {
     border-color: white;
     padding: 20px;
@@ -54,17 +66,36 @@
     border-style: solid;
     border-radius: 10%;
 }
-.center {
-    text-align: center;
+.ui-widget {
+    font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif;
+    font-size: 1.1em !important;
 }
-.smaller-image {
-    width: 100px;
+.ui-widget .ui-widget {
+    font-size: 1em !important;
 }
-#demo, #demo2, #demo3{
-    margin-top: 20px;
+.ui-widget input, .ui-widget select, .ui-widget textarea,.ui-widget button {
+    font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif;
+    font-size: 1em !important;
+}
+.ui-widget-content {
+    color: black !important; }
+.ui-widget-content a {
+    color: white !important;
+}
+.ui-widget-header {
+    background: white;
+    color: cyan;
+    font-weight: bold; !important;
+}
+.ui-widget-header a {
+    color: white !important;
+}
+.usefulInfoImage {
+    width: 60px;
+    height: 60px;
 }
 
-
+/* Create your personal To Visit List form*/
 
 /* Remove margins and padding from the list */
 #myUl {
@@ -190,22 +221,8 @@ input {
     border: 3px solid #beb3d9;
     width: 50%;
 }
-
 .custom-background {
     background-color: white !important;
     color: white;
     border: blue;
-}
-
-.ui-widget { font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif; font-size: 1.1em !important;}
-.ui-widget .ui-widget { font-size: 1em !important; }
-.ui-widget input, .ui-widget select, .ui-widget textarea,.ui-widget button {font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif; font-size: 1em !important; }
-.ui-widget-content { color: black !important; }
-.ui-widget-content a { color: white !important; }
-.ui-widget-header { background: white; color: cyan; font-weight: bold; !important;}
-.ui-widget-header a { color: white !important; }
-
-.usefulInfoImage {
-    width: 60px;
-    height: 60px;
 }
